# laskin

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: index.py  kayttoliittyma.py  laskin.py  laskutoimitukset.py  lausekkeen_tarkistus.py  muuttujat.py  shunting_yard.py
src/testit/: laskin_test.py  laskutoimitukset_test.py  lausekkeen_tarkistus_test.py  muuttujat_test.py  shunting_yard_test.py
