[tool.poetry]
name = "laskin"
version = "0.1.0"
description = ""
authors = ["Taina Hilliaho <taina.hilliaho@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"



[tool.poetry.dev-dependencies]
pylint = "^2.15.2"
coverage = "^6.4.4"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
